* Fix overflow problem

--- a/assets/css/hyde.css
+++ b/assets/css/hyde.css
@@ -124,6 +124,7 @@ a.sidebar-nav-item:focus {
 .content {
   padding-top:    4rem;
   padding-bottom: 4rem;
+  overflow-x: auto
 }
 
 @media (min-width: 48rem) {
